--- a/style.css
+++ b/style.css
@@ -23,3 +23,16 @@ button {
 .btnAtras {
     border-radius: 15px;
 }
+
+.categoria {
+    border: 1px solid black;
+    width: 80%;
+    border-radius: 15px;
+    height: 35px;
+    padding: 0px 25px;
+    margin: 10px auto;
+}
+
+.categoria button {
+    float: right;
+}
